2013-03-27  William A. Perkins  <william.perkins@pnnl.gov>

	* Makefile.am (check_PROGRAMS): add diffusive_bed_test

	* diffusive_bed_test.f90, diffusive_bed.f90: add

	* gastemp/energy_flux_module.f90 (latent_heat): correct formula

2013-03-18  William A. Perkins  <william.perkins@pnnl.gov>

	* gastemp/energy_flux_module.f90 (latent_heat): use a little more
	defensible formula

2013-03-13  William A. Perkins  <william.perkins@pnnl.gov>

	* test/temperature/pond: test the light extinction coefficient

	* scalars_source.f90 (scalar_source_term): heat flux
	calculation now requires depth

	* temperature_source.f90 (temperature_source_term): heat flux
	calculation now requires depth

	* met_zone.f90 (met_zone_read): read the light extinction
	coefficient 
	(met_zone_heat_flux_zone): heat flux calculations now require
	depth 

	* gastemp/energy_flux_module.f90 (net_solar_rad): add and use a
	light extinction coefficient 

2013-03-11  William A. Perkins  <william.perkins@pnnl.gov>

	* met_zone.f90 (met_zone_read): set emissivity,
	reflectivity, and albedo coefficients

	* gastemp/energy_flux_module.f90 (energy_flux): add emissivity,
	reflectivity, and albedo coefficients

	* met_zone.f90 (met_zone): put the coefficient series in an array
	sized the same a the energy coefficients

	* gastemp/energy_flux_module.f90 (energy_flux): add coefficient
	default values and keywords

	* met_zone.f90 (met_zone_heat_flux_zone)
	(met_zone_heat_flux_byid, met_zone_evaporation_zone): added

	* accumulator.f90 (accumulate_tdg): use met zone 1 for barometric
	pressure

	* scalars_source.f90 (scalar_source_timestep): call met_zone_update

	* tdg_source.f90 (tdg_source_term): use met zone 1

	* temperature_source.f90 (temperature_source_term): use met zone 1

	* constants.f90 (constants): metric_density needs to be here

	* gastemp/energy_flux_module.f90 (net_heat_flux): make a
	coefficient array and pass to all atmospheric exchange routines

	* met_data_module.f90: no longer used
