@@ -1,5 +1,5 @@
   ! ----------------------------------------------------------------
-  ! file: diffusive_bed_test.f90
+  ! file: thermal_bed_test.f90
   ! ----------------------------------------------------------------
   ! ----------------------------------------------------------------
   ! Battelle Memorial Institute
@@ -9,66 +9,71 @@
   ! Created March 19, 2013 by William A. Perkins
   ! Last Change: Thu Jun  3 06:45:08 2010 by William A. Perkins <d3g096@PE10900.pnl.gov>
   ! ----------------------------------------------------------------
-PROGRAM diffusive_bed_test
+PROGRAM thermal_bed_test
 
-  USE diffusive_bed
+  USE thermal_bed
 
   IMPLICIT NONE
 
-  TYPE (diffusive_bed_rec) :: dbed
-  DOUBLE PRECISION :: t, kdiff, deltat, tmax, depth
+  TYPE (thermal_bed_rec) :: tbed
+  DOUBLE PRECISION :: t, deltat, tmax
+  DOUBLE PRECISION :: depth, spgrav, kond, spheat
   INTEGER :: i, layers, l, tsteps
 
   DOUBLE PRECISION :: phi_delta, phi_o, phi_w
 
-  layers = 15
-  kdiff = 2.5e-05
-  depth = 15.0
+  layers = 10
+  depth = 2.0
   phi_o = 10.0
-  phi_delta = 10.0
+  phi_delta = 5.0
 
-  CALL diffusive_bed_initialize(dbed, depth, layers, kdiff, phi_o, phi_o)
+  spgrav = 1.6
+  spheat = 800
+  kond = 0.3
+  
+
+  CALL thermal_bed_initialize(tbed, depth, layers, kond, spheat, spgrav, phi_o, phi_o)
 
   tsteps = 24
   deltat = 3600.0
   t = 0.0
   tmax = deltat*tsteps
 
-  CALL printit(t, dbed)
+  CALL printit(t, tbed)
 
-  DO WHILE (t .LT. tmax)
+  DO WHILE (t .LT. 2*tmax)
      t = t + deltat
      phi_w = phi_o + phi_delta*SIN(2.0*3.14159*t/tmax)
-     CALL diffusive_bed_solve(dbed, deltat, phi_w)
-     CALL printit(t, dbed)
+     CALL thermal_bed_solve(tbed, deltat, phi_w)
+     CALL printit(t, tbed)
   END DO
 
-  CALL diffusive_bed_release(dbed)
+  CALL thermal_bed_release(tbed)
 
-END PROGRAM diffusive_bed_test
+END PROGRAM thermal_bed_test
 
 ! ----------------------------------------------------------------
 ! SUBROUTINE printit
 ! ----------------------------------------------------------------
-SUBROUTINE printit(t, dbed)
+SUBROUTINE printit(t, tbed)
 
-  USE diffusive_bed
+  USE thermal_bed
 
   IMPLICIT NONE
 
   DOUBLE PRECISION, INTENT(IN) :: t
-  TYPE (diffusive_bed_rec), INTENT(IN) :: dbed
+  TYPE (thermal_bed_rec), INTENT(IN) :: tbed
 
   DOUBLE PRECISION :: z, flux
   INTEGER :: layers(1), l
 
-  layers = UBOUND(dbed%phi)
-  z = (layers(1)-1)*dbed%dz
+  layers = UBOUND(tbed%dbed%phi)
+  z = (layers(1)-1)*tbed%dbed%dz
   
-  flux = diffusive_bed_flux(dbed)
+  flux = thermal_bed_flux(tbed)
   DO l = 1, layers(1)
-     WRITE (*, '(F5.1, F5.1, F5.1, G15.6)') t/3600.0, z, dbed%phi(l), flux
-     z = z - dbed%dz
+     WRITE (*, '(F5.1, F5.1, F5.1, G15.6)') t/3600.0, z, tbed%dbed%phi(l), flux
+     z = z - tbed%dbed%dz
   END DO
   WRITE (*, *)
 END SUBROUTINE printit
